k8s/longhorn/csi-attacher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    driver.longhorn.io/git-commit: dcd5164185d7130732f72bb2e978dfdc0338acd1
    driver.longhorn.io/version: v1.6.2
    longhorn.io/last-applied-tolerations: '[]'
  labels:
    app: csi-attacher
    longhorn.io/managed-by: longhorn-manager
  name: csi-attacher
  namespace: longhorn-system

spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10

  selector:
    matchLabels:
      app: csi-attacher

  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: csi-attacher

    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - csi-attacher
              topologyKey: kubernetes.io/hostname
            weight: 1

      containers:
      - name: csi-attacher
        image: longhornio/csi-attacher:v4.5.1
        imagePullPolicy: IfNotPresent

        args:
        - --v=2
        - --csi-address=$(ADDRESS)
        - --timeout=1m50s
        - --leader-election
        - --leader-election-namespace=$(POD_NAMESPACE)

        resources: {}

        volumeMounts:
        - mountPath: /csi/
          name: socket-dir

      dnsPolicy: ClusterFirst
      priorityClassName: longhorn-critical
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}

      serviceAccount: longhorn-service-account
      serviceAccountName: longhorn-service-account

      terminationGracePeriodSeconds: 30

      volumes:
      - name: socket-dir
        hostPath:
          path: /var/lib/kubelet/plugins/driver.longhorn.io
          type: DirectoryOrCreate
