k8s/longhorn/csi-snapshotter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    driver.longhorn.io/git-commit: dcd5164185d7130732f72bb2e978dfdc0338acd1
    driver.longhorn.io/version: v1.6.2
    longhorn.io/last-applied-tolerations: '[]'
  labels:
    app: csi-snapshotter
    longhorn.io/managed-by: longhorn-manager
  name: csi-snapshotter
  namespace: longhorn-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: csi-snapshotter
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: csi-snapshotter
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - csi-snapshotter
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - name: csi-snapshotter
        image: longhornio/csi-snapshotter:v6.3.4
        imagePullPolicy: IfNotPresent
        args:
        - --v=2
        - --csi-address=$(ADDRESS)
        - --timeout=1m50s
        - --leader-election
        - --leader-election-namespace=$(POD_NAMESPACE)
        resources: {}
        volumeMounts:
        - mountPath: /csi/
          name: socket-dir
      dnsPolicy: ClusterFirst
      priorityClassName: longhorn-critical
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccountName: longhorn-service-account
      terminationGracePeriodSeconds: 30
      volumes:
      - name: socket-dir
        hostPath:
          path: /var/lib/kubelet/plugins/driver.longhorn.io
          type: DirectoryOrCreate
